# lucky

./: README.md  main.py  pyproject.toml
src/: __init__.py  lucky.py  money.kv
